<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.example.funface.widget.CustomToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:custom_toolbar_title="@string/app_name"
        android:background="@color/pineappleYellow"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/collection_name_header"
        style="@style/HeadingText"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:text="@string/collection_new_header"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/collection_name_edit_text"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="60dp"
        android:digits="@string/util_input_digits"
        android:focusable="true"
        android:maxLength="20"
        android:hint="@string/collection_new_hint"
        app:layout_constraintTop_toBottomOf="@id/collection_name_header"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/collection_name_bottom_button"
        style="@style/BottomButtonDisabled"
        android:text="@string/edit_finish_button"
        android:background="@android:color/transparent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>