<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.funface.widget.CustomToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:custom_toolbar_title="@string/app_name"
        android:background="@color/pineappleYellow"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/collection_heading"
        style="@style/HeadingText"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:text="@string/collection_main_header"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:id="@+id/collection_recyclerview"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/collection_heading"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/collection_fragment_empty_text"
        android:visibility="gone"
        android:layout_marginTop="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintTop_toBottomOf="@id/collection_heading"
        android:text="@string/collection_fragment_empty"
        android:textSize="30sp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>